--- a/requirements.txt
+++ b/requirements.txt
@@ -27,5 +27,6 @@ python-dotenv==1.0.1
 # Data handling
 python-dateutil==2.9.0.post0
 
-# HTTP client (for testing)
+# HTTP client
 httpx==0.28.1
+requests>=2.31.0
