--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,10 @@ pydantic-settings==2.6.1
 
 # Google Gemini AI
 google-genai==0.2.2
+google-cloud-aiplatform==1.51.0
+
+# Google Cloud Vision (OCR)
+google-cloud-vision==3.6.0
 
 # PDF Processing
 pdfplumber==0.11.4
